Fix css footer issue where the top of the footer was overlapping content.

--- a/app/assets/stylesheets/welcome/index.css.scss
+++ b/app/assets/stylesheets/welcome/index.css.scss
@@ -28,7 +28,7 @@ body {
   color: white;
   font-family: $headings-font-family;
   font-size: 16px;
-  padding-top: 50px;
+  padding-top: 30px;
   padding-bottom: 20px;
 
   @media (max-width: $screen-sm-min) {
@@ -46,3 +46,4 @@ body {
     padding-right: 15px;
   }
 }
+
